@@ -8,8 +8,13 @@ import java.util.regex.Pattern;
  @author Jonathan Hedley, jonathan@hedley.net */
 public class TextUtil {
     static Pattern stripper = Pattern.compile("\\r?\\n\\s*");
+    static Pattern stripCRs = Pattern.compile("\\r*");
 
     public static String stripNewlines(String text) {
         return stripper.matcher(text).replaceAll("");
+    }
+
+    public static String stripCRs(String text) {
+        return stripCRs.matcher(text).replaceAll("");
     }
 }
